[package]
name = "hangzone_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rocket = "0.4.10"
serde = "1.0.134"
serde_json = "1.0.76"
sqlx = { version = "0.5.10", features = ['runtime-actix-native-tls'] }
