[package]
name = "hangzone_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
geojson = "0.22.2"
jsonwebtoken = "7.2.0"
rand = "0.8.4"
rocket = "0.4.10"
rocket_cors = { version = "0.5.2", default-features = false }
scrypt = { version = "0.8.1", default-features = true }
serde = "1.0.134"
serde_json = "1.0.76"
slug = "0.1.4"
sqlx = { version = "0.5.10", features = ['runtime-tokio-native-tls', 'postgres'] }
tokio = { version = "1", features = ["full"]}
validator = "0.14.0"
validator_derive = "0.14.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "diesel_postgres_pool"]